2006-02-02  Eric Anholt  <anholt@FreeBSD.org>

	reviewed by: zrusin

	* hw/xfree86/exa/Makefile.am:
	* hw/xfree86/exa/exa.c: (exaPixmapIsOffscreen),
	(exaGetOffscreenPixmap), (exaDrawableIsOffscreen),
	(exaPrepareAccess), (exaFinishAccess), (exaCreateGC),
	(exaDriverInit):
	* hw/xfree86/exa/exaPriv.h:
	* hw/xfree86/exa/exa_accel.c: (exaPaintWindow):
	* hw/xfree86/exa/exa_migration.c: (exaMoveOutPixmap),
	(exaPixmapUseScreen), (exaPixmapUseMemory):
	* hw/xfree86/exa/exa_offscreen.c:
	* hw/xfree86/exa/exa_priv.h:
	* hw/xfree86/exa/exa_render.c:
	* hw/xfree86/exa/exa_unaccel.c:
	* hw/xfree86/exa/exaasync.c:
	* hw/xfree86/exa/exaoffscreen.c:
	* hw/xfree86/exa/exapict.c:
	Rearrange and rename EXA code to be a bit more logically organized.
	Also removes a little bit of debugging leftovers.  Summary:

	exa.c ->	exa.c			(miscellaneous code)
			exa_accel.c		(all acceleration code)
			exa_migration.c		(migration logic)
	exaasync.c ->	exa_unaccel.c		(software fallbacks)
	exapict.c ->	exa_render.c		(render extension stuff)
	exaoffscreen.c -> exa_offscreen.c
	exaPriv.h ->	exa_priv.h

2006-02-01  Alan Hourihane  <alanh@fairlite.demon.co.uk>

	* randr/randr.c: (RRGetRotation):
	* randr/randrstr.h:
	Add a new function RRGetRotation() which does exactly the same
	thing as xf86GetRotation(), but allows for drivers to provide
	their own RandR implementation. xf86GetRotation could be
	obsoleted by this change.

2006-01-31  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/ddc/edid.h:
	* hw/xfree86/ddc/interpret_edid.c: (get_dt_md_section):

	Further bug #5386 fixes: Fix some problems with the EDID code:
	Some bitoffsets were wrong.
	Unknown Detailed Sections weren't handled properly and defaulted to
	Detailed Timing.

2006-01-31  Luc Verhaegen  <libv@skynet.be>

	* hw/xfree86/utils/cvt/.cvsignore:
	* hw/xfree86/utils/cvt/cvt.c: (xf86CVTMode), (CVTCheckStandard),
	(PrintModeline), (main):

	Bring the cvt utility up to date with bug #5386 changes.